# LaneAtt_rosws

./: .gitignore  LICENSE  README.md
models/: laneatt_100.pt
src/control_robot/: CMakeLists.txt  package.xml
src/control_robot/src/: control.cpp  control_basic.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: Prediction.msg
src/inference/: package.xml  setup.py
src/inference/inference/: make_prediction.py
src/metrics/: package.xml  setup.py
src/metrics/config/: calibration.yaml  ost.yaml
src/metrics/launch/: start_aruco_launch.py
src/metrics/metrics/: aruco.py  aruco_realsense.py  error.py
src/project_startup/: package.xml  setup.cfg  setup.py
src/project_startup/launch/: live_inference.launch.py  mock_inference.launch.py  publish_inference.launch.py
src/publish_video/: CMakeLists.txt  package.xml  video3-test.avi
src/publish_video/src/: publish_video.cpp
src/pycontrol/: package.xml  setup.cfg  setup.py
src/pycontrol/pycontrol/: control.py
